# Sigmoid_Classification

./: .gitignore  README.md  analysis.md  analyzer.py  data_generator.py  dataset.csv  main.py  model_trainer.py  predictions.csv  pyproject.toml  requirements.txt  setup.ps1  setup.sh  visualizer.py
.claude/: settings.local.json
docs/: CLAUDE.md  PLANNING.md  PRD.md  SESSION_PROGRESS.md  TODO.md
